SD-PCGPA does not work. Added TDP as method. (untested)

--- a/some_definitions_and_formulas.ipynb
+++ b/some_definitions_and_formulas.ipynb
@@ -109,12 +109,17 @@
     "    $S_{mk} = (E_k + A_{mk})\\cdot G(E_k + A_{mk})$\n",
     "\n",
     "\n",
-    "4. 2D-SI  \n",
-    "    $S_{mk} = G(E_k' + E_{mk}'') \\cdot E_k$  \n",
-    "    $E_k' = \\sum_n D_{kn}B_n E_n\\quad$ ($B_n$ represents a bandpass filter)\n",
+    "4. Time-Domain-Ptychography  \n",
+    "    Same as FROG or I-FROG only $A_{mk}$ is different.  \n",
+    "    $A_{mk}' = \\sum_n D_{kn}B_n A_{mn}\\quad$ ($B_n$ represents a known spectral filter)\n",
     "\n",
     "\n",
-    "5. Vampire  \n",
+    "5. 2D-SI  \n",
+    "    $S_{mk} = G(E_k' + E_{mk}'') \\cdot E_k \\quad$ (assumes that E_k and E_k' have zero relative delay.)  \n",
+    "    $E_k' = \\sum_n D_{kn}B_n E_n\\quad$ ($B_n$ represents a known spectral filter)\n",
+    "\n",
+    "\n",
+    "6. Vampire  \n",
     "    $S_{mk} = G(E_k + E_k') \\cdot A_{mk}$  \n",
     "    $E_k' = \\sum_n D_{kn}E_ne^{i\\phi_n}\\quad$ ($\\phi_n$ represents a material dispersion)"
    ]
@@ -333,6 +338,155 @@
     "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk}e^{i\\tau_m\\omega_n}(E_k + A_{mk})^2$  \n",
     "\n",
     "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}e^{-i\\tau_m\\omega_n}|E_k + A_{mk}|^2$\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c98148b",
+   "metadata": {},
+   "source": [
+    "### Time-Domain-Ptychography (with respect to Pulse)\n",
+    "\n",
+    "Should be correct, just derived based on FROG result\n",
+    "\n",
+    "1. SHG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn}\\cdot(A_{mk}' + B_n\\cdot e^{-i\\tau_m\\omega_n} E_k)$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn}\\cdot(A_{mk}'^2 + 2B_n\\cdot e^{-i\\tau_m\\omega_n} E_k A_{mk})$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk} \\cdot B_n^*\\cdot e^{i\\tau_m\\omega_n} E_k A_{mk}$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn} A_{mk}'^* \\cdot (A_{mk}' + B_n\\cdot e^{-i\\tau_m\\omega_n} E_k)$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "4. SD  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 2 D_{nk} B_n^*\\cdot E_k A_{mk}'^* e^{i\\tau_m\\omega_n} $  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn} (A_{mk}'^*)^2 $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "210b6bf6",
+   "metadata": {},
+   "source": [
+    "### X-Time-Domain-Ptychography (with respect to Pulse)  \n",
+    "\n",
+    "Same for all nonlinear methods  \n",
+    "\n",
+    "$\\frac{dS_{mk}}{dE_n^*} = 0 $  \n",
+    "\n",
+    "$\\frac{dS_{mk}}{dE_n} = D_{kn} G(A_{mk}') $\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f8853c9",
+   "metadata": {},
+   "source": [
+    "### X-Time-Domain-Ptychography (with respect to Gate Pulse)\n",
+    "\n",
+    "$\\frac{dS_{mk}}{dE_n} = \\frac{dS_{mk}}{dA_{mk}'}\\frac{dA_{mk}'}{dE_n}$  \n",
+    "\n",
+    "$\\frac{dS_{mk}}{dE_n^*} = \\frac{dS_{mk}}{dA_{mk}'^*}\\left(\\frac{dA_{mk}'}{dE_n}\\right)^*$\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "1. SHG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn} B_n\\cdot E_k e^{-i\\tau_m\\omega_n}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2 \\cdot D_{kn} B_n\\cdot E_k A_{mk}' e^{-i\\tau_m\\omega_n}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk} \\cdot B_n^*\\cdot E_k A_{mk}' e^{i\\tau_m\\omega_n}$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = D_{kn} \\cdot B_n\\cdot E_k A_{mk}'^* e^{-i\\tau_m\\omega_n}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "4. SD  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 2\\cdot D_{nk} B_n^*\\cdot E_k A_{mk}'^* e^{i\\tau_m\\omega_n}$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f2aa9ad",
+   "metadata": {},
+   "source": [
+    "### I-Time-Domain-Ptychography (with respect to pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}(1+B_n\\cdot e^{-i\\tau_m\\omega_n})\\cdot (E_k + A_{mk}')$\n",
+    "    \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 3D_{kn}(1+B_n\\cdot e^{-i\\tau_m\\omega_n})\\cdot (E_k + A_{mk}')^2$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk}(1+B_n^*\\cdot e^{i\\tau_m\\omega_n})\\cdot (E_k + A_{mk}')^2$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}(1+B_n\\cdot e^{-i\\tau_m\\omega_n})\\cdot |E_k + A_{mk}'|^2$\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b00e056d",
+   "metadata": {},
+   "source": [
+    "### I+X Time-Domain-Ptyhcography (with respect to gate-pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}B_n\\cdot e^{-i\\tau_m\\omega_n}(E_k + A_{mk}')$\n",
+    "    \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 3D_{kn}B_n\\cdot e^{-i\\tau_m\\omega_n}(E_k + A_{mk}')^2$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = D_{nk}B_n^*\\cdot e^{i\\tau_m\\omega_n}(E_k + A_{mk}')^2$  \n",
+    "\n",
+    "    $\\frac{dS_{mk}}{dE_n} = 2D_{kn}B_n\\cdot e^{-i\\tau_m\\omega_n}|E_k + A_{mk}'|^2$\n",
     "<br>"
    ]
   },
@@ -612,6 +766,156 @@
     "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} (E_k+A_{mk})^* e^{i\\tau_m\\omega_n}e^{-i\\tau_m\\omega_p}$\n",
     "\n",
     "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} (E_k+A_{mk})^*e^{-i\\tau_m\\omega_n}e^{i\\tau_m\\omega_p}$\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "888fde6a",
+   "metadata": {},
+   "source": [
+    "### Time-Domain-Ptachography (with respect to Pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $V_{zz} = 0$\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "   $V_{zz} = 0$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = D_{pk} D_{kn}\\cdot \\left( A_{mk}'^* B_p e^{-i\\tau_m\\omega_p} + E_k^* B_n^*B_p e^{i\\tau_m\\omega_n} e^{-i\\tau_m\\omega_p} \\right) $\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = D_{nk} D_{kp} \\cdot \\left( A_{mk}'^* B_n e^{-i\\tau_m\\omega_n} + E_k^* B_nB_p^* e^{i\\tau_m\\omega_p} e^{-i\\tau_m\\omega_n} \\right)$\n",
+    "    \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "4. SD  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2\\cdot D_{pk}D_{kn} \\cdot A_{mk}' B_p e^{-i\\tau_m\\omega_p} $\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2\\cdot D_{nk}D_{kp} \\cdot A_{mk}' B_n e^{-i\\tau_m\\omega_n} $\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "880c8410",
+   "metadata": {},
+   "source": [
+    "### X-Time-Domain-Ptachography (with respect to Pulse)  \n",
+    "\n",
+    "Same for all nonlinear methods.  \n",
+    "\n",
+    "$V_{zz} = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04168fe2",
+   "metadata": {},
+   "source": [
+    "### X-Time-Domain-Ptychography (with respect to Gate Pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $V_{zz} = 0$\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "   $V_{zz} = 0$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = D_{nk}D_{kp} E_k^* B_n^*B_p e^{i\\tau_m\\omega_n} e^{-i\\tau_m\\omega_p} $\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = D_{kn}D_{pk} E_k^* B_nB_p^* e^{-i\\tau_m\\omega_n} e^{i\\tau_m\\omega_p}$\n",
+    "    \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "4. SD  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 0$\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 0$\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f39aec65",
+   "metadata": {},
+   "source": [
+    "### I-Time-Domain-Ptychography (with respect to pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $V_{zz} = 0$\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "   $V_{zz} = 0$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} (E_k+A_{mk}')^* (1+B_n^*e^{i\\tau_m\\omega_n}) (1+B_p e^{-i\\tau_m\\omega_p}) $\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} (E_k+A_{mk}')^* (1+B_n e^{-i\\tau_m\\omega_n}) (1+B_p^*e^{i\\tau_m\\omega_p})$\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73252b9a",
+   "metadata": {},
+   "source": [
+    "### I+X Time-Domain-Ptychogaphy (with respect to pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $V_{zz} = 0$\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "   $V_{zz} = 0$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} (E_k+A_{mk}')^*$\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} (E_k+A_{mk}')^*$\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f23b686",
+   "metadata": {},
+   "source": [
+    "### I+X Time-Domain-Ptychography (with respect to gate-pulse)\n",
+    "\n",
+    "1. SHG  \n",
+    "    $V_{zz} = 0$\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "2. THG  \n",
+    "   $V_{zz} = 0$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "3. PG/SD  \n",
+    "    $\\frac{d}{dE_p}\\left(\\frac{dS_{mk}}{dE_n}\\right)^* = 2D_{nk}D_{kp} (E_k+A_{mk}')^* B_n^*B_p e^{i\\tau_m\\omega_n}e^{-i\\tau_m\\omega_p}$\n",
+    "\n",
+    "    $\\frac{d}{dE_p^*}\\left(\\frac{dS_{mk}}{dE_n^*}\\right)^* = 2D_{kn}D_{pk} (E_k+A_{mk}')^* B_nB_p^* e^{-i\\tau_m\\omega_n}e^{i\\tau_m\\omega_p}$\n",
     "    "
    ]
   },
@@ -953,10 +1257,12 @@
     "Expansion of error-function as taylor series. (Like COPRA-Paper or CR-Calculus chapter)  \n",
     "\n",
     "<br>\n",
-    "1. Order  \n",
+    "1. Order \n",
+    "\n",
     "$L'=L + 2\\cdot \\Re\\left\\{\\sum_n (E_n'-E_n)^\\dag \\nabla_nL\\right\\}$  \n",
     "<br>\n",
-    "2. Order  \n",
+    "2. Order \n",
+    "\n",
     "$L'=L + 2\\cdot \\Re\\left\\{\\sum_n (E_n'-E_n)^\\dag \\nabla_nL\\right\\} + \\Re\\left\\{\\sum_n (E_n'-E_n)^\\dag H_L^n(E_n'-E_n)\\right\\}$"
    ]
   },
