Started adding examples

--- a/docs/source/Definitions_and_Formulas.ipynb
+++ b/docs/source/Definitions_and_Formulas.ipynb
@@ -277,7 +277,7 @@
     "<br>\n",
     "\n",
     "5. nth-HG  \n",
-    "    $\\frac{dS_{mk}}{dE_n^*} = 0 $  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
     "\n",
     "    $\\frac{dS_{mk}}{dE_n} = (n-1) \\cdot D_{kn} E_k A_{mk}^{n-2} e^{-i\\tau_m\\omega_n}$"
    ]
@@ -347,9 +347,9 @@
     "<br>\n",
     "\n",
     "4. nth-HG  \n",
-    "    $\\frac{dS_{mk}}{dE_n^*} = 0 $  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
     "\n",
-    "    $\\frac{dS_{mk}}{dE_n} = n\\cdot D_{kn} (E_k + A_{mk})^2{n-1}$"
+    "    $\\frac{dS_{mk}}{dE_n} = n\\cdot D_{kn} (E_k + A_{mk})^{n-1}$"
    ]
   },
   {
@@ -592,7 +592,7 @@
     "<br>\n",
     "\n",
     "5. nth-HG  \n",
-    "    $\\frac{dS_{mk}}{dE_n^*} = 0 $  \n",
+    "    $\\frac{dS_{mk}}{dE_n^*} = 0$  \n",
     "\n",
     "    $\\frac{dS_{mk}}{dE_n} = n\\cdot D_{kn} A_{mk}^{n-1} e^{i\\phi_{mn}}$"
    ]
